force-app/main/default/objects/Edfund_Vendor_Contact__c/Edfund_Vendor_Contact__c.object-meta.xml
<CustomObject>
    <label>Edfund Vendor Contact</label>
    <nameField>
        <displayFormat>EV Contact - {0000}</displayFormat>
        <label>Edfund Vendor Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edfund Vendor Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>