force-app/main/default/objects/Edfund_Vendor_Contact__c/fields/EdFund_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EdFund Vendor</label>
    <referenceTo>EdFund_Vendor__c</referenceTo>
    <relationshipLabel>Edfund Vendor Contacts</relationshipLabel>
    <relationshipName>Edfund_Vendor_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>