force-app/main/default/objects/Edfund_Vendor_Contact__c/fields/Vendor_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Type__c</fullName>
    <label>Vendor Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Admissions Counselor</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Business Office Manager</fullName>
            </value>
            <value>
                <fullName>Director of Admissions</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Program Director/Nurse Consultant</fullName>
            </value>
            <value>
                <fullName>Student Support Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>